feat: link task_create view url to template

--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -5,7 +5,8 @@
     <div class="container mt-4">
         <h2>Task Manager</h2>
         <!-- Button to create a new task -->
-        <a href="#" class="btn btn-primary mb-3">Add New Task</a>
+        <a href="{% url 'task_create' %}
+        " class="btn btn-primary mb-3">Add New Task</a>
         <!-- Task Table -->
         <table class="table table-bordered">
             <thead>
