--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -31,7 +31,8 @@
                     <td>{{ task.completed }}</td>
                     <td>
                         <!-- Button to edit an existing task -->
-                        <a href="#" class="btn btn-warning btn-sm">Edit</a>
+                        <a href="{% url 'task_edit' task.pk %}
+                        " class="btn btn-warning btn-sm">Edit</a>
                         <!-- Button to delete an existing task -->
                         <a href="#" class="btn btn-danger btn-sm">Delete</a>
                     </td>
