--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -34,7 +34,8 @@
                         <a href="{% url 'task_edit' task.pk %}
                         " class="btn btn-warning btn-sm">Edit</a>
                         <!-- Button to delete an existing task -->
-                        <a href="#" class="btn btn-danger btn-sm">Delete</a>
+                        <a href="{% url 'task_delete' task.pk %}
+                        " class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
