--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -16,7 +16,7 @@
                     <th>Description</th>
                     <th>Deadline</th>
                     <th>Priority</th>
-                    <th>Status</th>
+                    <th>Completion Status</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -27,7 +27,7 @@
                     <td>{{ task.title }}</td>
                     <td>{{ task.description }}</td>
                     <td>{{ task.deadline }}</td>
-                    <td>{{ task.priority }}</td>
+                    <td>{{ task.get_priority_display }}</td>
                     <td>{{ task.completed }}</td>
                     <td>
                         <!-- Button to edit an existing task -->
