feat: use of bootstrap template for task list

--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -1,46 +1,72 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+
 {% block content %}
+
+<!-- Credit to this Bootstrap Template from 'To Do List #6': https://mdbootstrap.com/docs/standard/extended/to-do-list/ -->
 <main>
-    <div class="container mt-4">
-        <h2>Task Manager</h2>
-        <!-- Button to create a new task -->
-        <a href="{% url 'task_create' %}
-        " class="btn btn-primary mb-3">Add New Task</a>
-        <!-- Task Table -->
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>User</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Deadline</th>
-                    <th>Priority</th>
-                    <th>Completion Status</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for task in tasks %}
-                <tr>
-                    <td>{{ task.user }}</td>
-                    <td>{{ task.title }}</td>
-                    <td>{{ task.description }}</td>
-                    <td>{{ task.deadline }}</td>
-                    <td>{{ task.get_priority_display }}</td>
-                    <td>{% if task.completed == True %}&#10003;{% else %}&#10007;{% endif %}</td>
-                    <td>
-                        <!-- Button to edit an existing task -->
-                        <a href="{% url 'task_edit' task.pk %}
-                        " class="btn btn-warning btn-sm">Edit</a>
-                        <!-- Button to delete an existing task -->
-                        <a href="{% url 'task_delete' task.pk %}
-                        " class="btn btn-danger btn-sm">Delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    <section class="gradient-custom-2">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-md-12 col-xl-10">
+                    <div class="card mask-custom">
+                        <div class="card-body p-4 text-white">
+                            <div class="text-center pt-3 pb-2">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-todo-list/check1.webp"
+                                    alt="Check" width="60">
+                                <h2 class="my-4">Task List</h2>
+                                <a href="#" class="btn btn-primary mb-3">Add New Task</a>
+                            </div>
+                            <table class="table text-white mb-0">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Assignee</th>
+                                        <th scope="col">Title</th>
+                                        <th scope="col">Description</th>
+                                        <th scope="col">Deadline</th>
+                                        <th scope="col">Priority</th>
+                                        <th scope="col">Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for task in tasks %}
+                                    <tr class="fw-normal">
+                                        <th>
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                                                alt="avatar 1" style="width: 45px; height: auto;">
+                                            <span class="ms-2">{{ task.user }}</span>
+                                        </th>
+                                        <td class="align-middle">
+                                            <span>{{ task.title }}</span>
+                                        </td>
+                                        <td class="align-middle">
+                                            <span>{{ task.description }}</span>
+                                        </td>
+                                        <td class="align-middle">
+                                            <span>{{ task.deadline }}</span>
+                                        </td>
+                                        <td class="align-middle">
+                                            <h6 class="mb-0"><span
+                                                    class="badge bg-success">{{ task.get_priority_display }}</span>
+                                            </h6>
+                                        </td>
+                                        <td class="align-middle">
+                                            <a href="#" data-mdb-tooltip-init title="Done"><i
+                                                    class="fas fa-pencil fa-lg text-success me-3"></i></a>
+                                            <a href="#" data-mdb-tooltip-init title="Remove"><i
+                                                    class="fas fa-trash-alt fa-lg text-warning"></i></a>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 {% endblock %}
