--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -17,9 +17,9 @@
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-todo-list/check1.webp"
                                     alt="Check" width="60">
                                 <h2 class="my-4">Task List</h2>
-                                <a href="#" class="btn btn-primary mb-3">Add New Task</a>
+                                <a href="{% url 'task_create' %}" class="btn btn-primary mb-3">Add New Task</a>
                             </div>
-                            <table class="table text-white mb-0">
+                            <table class="table text-white mb-0 table-bg">
                                 <thead>
                                     <tr>
                                         <th scope="col">Assignee</th>
@@ -53,10 +53,10 @@
                                             </h6>
                                         </td>
                                         <td class="align-middle">
-                                            <a href="#" data-mdb-tooltip-init title="Done"><i
-                                                    class="fas fa-pencil fa-lg text-success me-3"></i></a>
-                                            <a href="#" data-mdb-tooltip-init title="Remove"><i
-                                                    class="fas fa-trash-alt fa-lg text-warning"></i></a>
+                                            <a href="{% url 'task_edit' task.pk %}" data-mdb-tooltip-init
+                                                title="Done"><i class="fas fa-pencil fa-lg text-success me-3"></i></a>
+                                            <a href="{% url 'task_delete' task.pk %}" data-mdb-tooltip-init
+                                                title="Remove"><i class="fas fa-trash-alt fa-lg text-warning"></i></a>
                                         </td>
                                     </tr>
                                     {% endfor %}
