--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -49,7 +49,7 @@
                                         </td>
                                         <td class="align-middle">
                                             <h6 class="mb-0"><span
-                                                    class="badge bg-success">{{ task.get_priority_display }}</span>
+                                                    class="badge {% if task.priority == 0 %}bg-success{% elif task.priority == 1 %}bg-warning{% else %}bg-danger{% endif %}">{{ task.get_priority_display }}</span>
                                             </h6>
                                         </td>
                                         <td class="align-middle">
