--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,3 +27,20 @@
     background-clip: padding-box;
     box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
 }
+
+.table-bg {
+    background-color: #303030;
+}
+
+tbody,
+td,
+tfoot,
+th,
+thead,
+tr {
+    border-color: dimgray;
+}
+
+.table>:not(caption)>*>* {
+    padding: 1rem 1rem;
+}
