--- a/tasks/templates/account/login.html
+++ b/tasks/templates/account/login.html
@@ -19,12 +19,17 @@
                   <div class="col-md-8 mt-3 offset-md-2">
                     <h3>{% trans "Sign In" %}</h3>
 
-                    <p>{% blocktrans %}Welcome back to the Task Manager. To view, create, edit or delete a Task, please
-                      log
-                      in. If
-                      you
-                      have not created an account yet, then <a href="{{ signup_url }}">sign up</a>
-                      first.{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Welcome back to the Task Manager. To access the following features: </p>
+                    <ul>
+                      <li><i class="fa-solid fa-clipboard-list"></i>View Tasks</li>
+                      <li><i class="fa-solid fa-plus"></i>Create a Task</li>
+                      <li><i class="fa-solid fa-pencil"></i>Edit an Existing Task(s)</li>
+                      <li><i class="fa-solid fa-trash-can"></i>Delete an Existing Task(s)</li>
+                    </ul>
+                    <p>Please log in. If you have not created an account yet, then <a href="{{ signup_url }}">sign
+                        up</a>first.{% endblocktrans %}</p>
+
+
                   </div>
                 </div>
                 <div class="row">
