feat: correct comment and add basic theme for logout page

--- a/tasks/templates/account/signup.html
+++ b/tasks/templates/account/signup.html
@@ -12,7 +12,7 @@
         <div class="card mask-custom">
           <div class="card-body p-4 text-white">
             <div class="text-center pt-3 pb-2">
-              <!-- Credit to Code Institute here for the structure of the Login page, extracted from the Django walkthrough project (Codestar Blog) -->
+              <!-- Credit to Code Institute here for the structure of the Signup page, extracted from the Django walkthrough project (Codestar Blog) -->
               <div class="container">
                 <div class="row">
                   <div class="col-md-8 mt-3 offset-md-2">
