--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <!-- Displaying django messages -->
+    <!-- Displaying django messages, credit to Code Institute's Django walkthrough project for this -->
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
