--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -53,9 +53,9 @@
                                         </td>
                                         <td class="align-middle">
                                             <a href="{% url 'task_edit' task.pk %}" data-mdb-tooltip-init
-                                                title="Edit"><i class="fas fa-pencil fa-lg text-success me-3"></i></a>
+                                                title="Edit"><i class="fas fa-pencil fa-lg text-warning me-3"></i></a>
                                             <a href="{% url 'task_delete' task.pk %}" data-mdb-tooltip-init
-                                                title="Remove"><i class="fas fa-trash-alt fa-lg text-warning"></i></a>
+                                                title="Remove"><i class="fas fa-trash-alt fa-lg text-danger"></i></a>
                                         </td>
                                     </tr>
                                     {% endfor %}
